# block-junk

./: .gitattributes  .gitignore  Cargo.toml
.cargo/: config.toml
.claude/skills/bevy-018/: SKILL.md
.claude/skills/lightyear-026/: SKILL.md
.claude/skills/networking-design/: SKILL.md
assets/: bed.blend  bed.blend1  bed.glb
crates/block-junk/: Cargo.toml
crates/block-junk-mod-api/: Cargo.toml
crates/block-junk-mod-api/src/: animations.rs  blocks.rs  items.rs  lib.rs  npcs.rs  recipes.rs  rooms.rs  textures.rs
crates/block-junk-scripting/: Cargo.toml
crates/block-junk-scripting/src/: lib.rs
crates/block-junk/src/: block_textures.rs  block_textures.wgsl  blocks.rs  camera.rs  client.rs  collision.rs  consumables.rs  craft_stations.rs  craft_ui.rs  debug.rs  haul.rs  inspect_panel.rs  interactables.rs  items.rs  main.rs  menu.rs  network.rs  npc.rs  npc_registry.rs  pathfinding.rs  physics.rs  plan_claims.rs  plans.rs  player_mode.rs  preview.rs  preview.wgsl  protocol.rs  recipes.rs  rooms.rs  save.rs  scripting.rs  server.rs  sleepers.rs  target_outline.rs  voxel.rs
mods/: MODELING.md
mods/hello/: data.lua  events.lua  manifest.toml  server.lua  shared.lua
mods/vanilla/: data.lua  events.lua  manifest.toml  shared.lua
mods/vanilla/models/: bed.glb  bed_single_A.gltf  berry_basket.gltf
