[package]
name = "block-junk-scripting"
version.workspace = true
edition.workspace = true
description = "Lua scripting host for block-junk mods, built on mlua."

[dependencies]
block-junk-mod-api = { path = "../block-junk-mod-api" }
mlua = { version = "0.11", features = ["lua54", "vendored", "serialize", "send"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
thiserror = "2"
tracing = "0.1"
