[package]
name = "block-junk"
version.workspace = true
edition.workspace = true

[dependencies]
# Bevy 0.18 made input sources opt-in features; "default" is just 2d/3d/ui rendering.
bevy = { version = "0.18", features = ["mouse", "keyboard"] }
block-mesh = "0.2"
ndshape = "0.3"
# Features:
# - default brings client/server/replication/prediction/interpolation
# - netcode + udp wire up real network transport for split mode
# - input_native enables the per-tick PlayerInput replication pipeline
#   (sequence-numbered input replay for prediction rollback)
# - Note we do NOT enable crossbeam: solo play runs a server thread +
#   client App talking via UDP-localhost (always-client architecture).
lightyear = { version = "0.26", features = ["netcode", "udp", "input_native", "frame_interpolation"] }
avian3d = "0.6"
bevy-inspector-egui = "0.36"
serde = { version = "1", features = ["derive"] }
bincode = "2"
thiserror = "2"

block-junk-mod-api = { path = "../block-junk-mod-api" }
block-junk-scripting = { path = "../block-junk-scripting" }
